src/objects/Product_Account__c.object
<CustomObject>
    <description>A junction object to provide a location for different product lines to capture specific information about the account pertinent to it&apos;s sales team</description>
    <fields>
        <fullName>AVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AVP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Product Divisions (AVP)</relationshipLabel>
        <relationshipName>Account_Product_Divisions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account_Id__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id__c</fullName>
        <description>Lookup to the account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Product Divisions</relationshipLabel>
        <relationshipName>Product_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DVP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Product Divisions (DVP)</relationshipLabel>
        <relationshipName>Account_Product_Divisions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Account_Summary__c</fullName>
        <description>Additional Information for the account</description>
        <label>Product Account Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>List of different product lines</description>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARDIOMEMS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSD</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account Product Divisions</relationshipLabel>
        <relationshipName>Account_Product_Divisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJM_ID__c</fullName>
        <externalId>true</externalId>
        <label>SJM ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Account Product Divisions (Sales Rep)</relationshipLabel>
        <relationshipName>Product_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the record</inlineHelpText>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Account Product Division</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Id__c</columns>
        <columns>Product_Line__c</columns>
        <columns>NAME</columns>
        <columns>Division__c</columns>
        <columns>Region__c</columns>
        <columns>Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Acct-{000000}</displayFormat>
        <label>Product Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Product Divisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>